--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesome-flask-server",
+  "name": "minthome",
   "version": "1.0.0",
   "description": "MINT home desktop app",
   "main": "main.js",
